<resources>
    <string name="app_name">Agrihelp</string>
    <string name="signup">Signup</string>
    <string name="username">Enter Username</string>
    <string name="email_address">Enter Email Address</string>
    <string name="phone_number">Enter Phone Number</string>
    <string name="password">Enter Password</string>
    <string name="confirm_password">Enter Confirm Password</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="register">Sign Up</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="booking_history">Booking History</string>
    <string name="profile">Profile</string>
    <string name="services">Services</string>
    <string name="drone_sprayer">Drone Sprayer</string>
    <string name="harvester">Harvester</string>
    <string name="thresher">Thresher</string>
    <string name="book_now">Book Now</string>
    <string name="contact_form">Contact Form</string>
    <string name="full_name">Enter Full Name</string>
    <string name="write_your_query">Write your query</string>
    <string name="submit">Submit</string>
    <string name="booking_form">Booking Form</string>
    <string name="pincode">Enter Pincode</string>
    <string name="crop_name">Enter Crop Name</string>
    <string name="date">Select Date</string>
    <string name="select_service">Select Service</string>
    <string name="id">Id</string>
    <string name="machine">Machine</string>
    <string name="crop">Crop</string>
    <string name="selected_date">Date</string>
    <string name="status">Status</string>
    <string name="hours">Enter Hours</string>
    <string name="recents">Recents</string>
    <string name="booking">Booking</string>
    <string name="textview">TextView</string>
    <string name="price">Price</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="show_details">Show Details</string>
    <string name="pin">Pincode</string>
    <string name="person_name">Alpesh Dholariya</string>
    <string name="person_email">dholariyaalpesh@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_account">My Account</string>
    <string name="about_agrihelp">About Agrihelp</string>
    <string name="support">24/7 Support</string>
    <string name="version">Version 1.0</string>
    <string name="book_it_online">Book It Online</string>
    <string name="grow_with_us">Grow With Us</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ds_detail">This drone is widely used in agriculture industry.</string>
    <string name="ds_price">From Rs.1500 per hour</string>
    <string name="harvester_detail">The combine harvester is a machine that harvests grain crops.</string>
    <string name="harvester_price">From Rs.800 per hour</string>
    <string name="thresher_detail">Farm machine for separating wheat, peas, soybeans.</string>
    <string name="thresher_price">From Rs.750 per hour</string>
    <string name="location">Jamnagar , Gujarat.</string>
    <string name="mail">agrihelp@gmail.com</string>
    <string name="tall_free_number"> +91 9408482488</string>
    <string name="any_questions">You have any questions or need additional information ?</string>
    <string name="agrihelp">Agrihelp</string>
    <string name="platforms">Published by Agrihelp Platforms Ltd.</string>
    <string name="about">Our company is a online booking system that is here to help farmers by giving service 24/7. Here Farmers can book Machinery on Rent. There are 3 services Drone Sprayer, Harvester and Thresher.</string>
    <string name="online_machinery">Book your machinery at rental price on rent for as many hours you want.</string>
    <string name="customer_support">If any query arise regarding anything related to us just contact us you get 24/7 support.</string>
    <string name="grow">Boost your yields by using our machinery and make your efforts to the market.</string>
</resources>