<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange_500"
    tools:context=".AboutUsFragment">

    <!-- Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_agrihelp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="125sp"
        android:text="@string/platforms"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="170sp"/>

    <TextView
        android:id="@+id/txtAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400sp"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck,UseCompatTextViewDrawableXml" />

</RelativeLayout>