<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/orange_500"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/lblSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="360sp"
        android:layout_height="530sp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="12sp"
        app:cardElevation="15sp">

        <ImageView
            android:layout_width="280sp"
            android:layout_height="80sp"
            android:layout_marginStart="40sp"
            android:layout_marginTop="4sp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo" />

        <!--        <EditText-->
        <!--            android:id="@+id/txtUserName"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginHorizontal="25sp"-->
        <!--            android:layout_marginTop="110sp"-->
        <!--            android:autofillHints=""-->
        <!--            android:backgroundTint="@color/orange_500"-->
        <!--            android:drawableEnd="@drawable/ic_person"-->
        <!--            android:hint="@string/username"-->
        <!--            android:inputType="text"-->
        <!--            android:textColorHint="@color/orange_500"-->
        <!--            tools:ignore="TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />-->

        <EditText
            android:id="@+id/txtEmailAddress"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25sp"
            android:layout_marginTop="110sp"
            android:autofillHints=""
            android:backgroundTint="@color/orange_500"
            android:drawableEnd="@drawable/ic_mail"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/orange_500"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25sp"
            android:layout_marginTop="170sp"
            android:autofillHints=""
            android:backgroundTint="@color/orange_500"
            android:drawableEnd="@drawable/ic_phone"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="@color/orange_500"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25sp"
            android:layout_marginTop="230sp"
            android:autofillHints=""
            android:backgroundTint="@color/orange_500"
            android:drawableEnd="@drawable/ic_visibility_off"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/orange_500"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25sp"
            android:layout_marginTop="300sp"
            android:autofillHints=""
            android:backgroundTint="@color/orange_500"
            android:drawableEnd="@drawable/ic_visibility_off"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/orange_500"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="210sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="75sp"
            android:layout_marginTop="380sp"
            android:backgroundTint="@color/green_500"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="19sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/lblQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55sp"
            android:layout_marginTop="470sp"
            android:text="@string/do_you_have_an_account"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="267sp"
            android:layout_marginTop="470sp"
            android:text="@string/login"
            android:textColor="@color/orange_500"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>