<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/adCards"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:orientation="vertical"
        android:background="@color/orange_500"
        tools:context=".HomeFragment">

        <TextView
            android:id="@+id/txtContactUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="15sp"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/icLocation"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginVertical="20sp"
            android:src="@drawable/ic_location"
            app:tint="@color/white"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/icMail"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginVertical="20sp"
            android:src="@drawable/ic_mail"
            app:tint="@color/white"
            tools:ignore="ContentDescription,ImageContrastCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/txtMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:text="@string/mail"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/icPhone"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginVertical="20sp"
            android:src="@drawable/ic_phone"
            app:tint="@color/white"
            tools:ignore="ContentDescription,ImageContrastCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/txtTallFreeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/tall_free_number"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <androidx.cardview.widget.CardView
            android:id="@+id/crdContactForm"
            android:layout_width="360sp"
            android:layout_height="510sp"
            android:layout_gravity="center"
            app:cardCornerRadius="15sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="30sp"
            app:cardElevation="15sp">

            <TextView
                android:id="@+id/txtContactForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="20sp"
                android:gravity="center"
                android:text="@string/contact_form"
                android:textColor="@color/orange_500"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/txtAnyQuery"
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:layout_marginVertical="90sp"
                android:layout_marginHorizontal="25sp"
                android:textColor="@color/orange_500"
                android:gravity="center"
                android:textSize="20sp"
                android:letterSpacing=".05"
                android:lineSpacingExtra="6sp"
                android:text="@string/any_questions"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/txtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:layout_marginTop="164sp"
                android:autofillHints=""
                android:backgroundTint="@color/orange_500"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textColorHint="@color/orange_500"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:layout_marginTop="230sp"
                android:autofillHints=""
                android:backgroundTint="@color/orange_500"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/orange_500"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/txtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:layout_marginTop="295sp"
                android:autofillHints=""
                android:backgroundTint="@color/orange_500"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="@color/orange_500"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/txtQuery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:layout_marginTop="360sp"
                android:autofillHints=""
                android:backgroundTint="@color/orange_500"
                android:hint="@string/write_your_query"
                android:minHeight="48dp"
                android:maxLines="2"
                android:inputType="textMultiLine|text"
                android:textColorHint="@color/orange_500"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="210sp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="75sp"
                android:layout_marginTop="440sp"
                android:backgroundTint="@color/green_500"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:textSize="19sp"
                tools:ignore="TextContrastCheck" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>